--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,34 +1,41 @@
 
-div {
+div.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100vw;
   margin: 0 auto;
+  font-size: 20px;
+  padding: 12px 0 12px 0;
+  background-color: #2f2f2f;
+  display: flex;
 
-  #logo_img{
+  #logo_img {
     width: 3rem;
+    fill: #E8DCB8;
+  }
+  h1 {
+    font-size: 1.1rem;
+    text-align: center;
+    padding: 0.2rem;
+    color: #E8DCB8;
+  }
 }
-h1 {
-  font-size: 1.1rem
-}
-}
-
 ul {
   padding: none;
   li {
     display: inline;
     button {
-        background-color:#DF0000;
-        display:inline-block;
-        cursor:pointer;
-        color:#ffffff;
-        padding:13px 14px;
-        text-decoration:none;
+      background-color: #2f2f2f;
+        color: #E8DCB8;
+        display: inline-block;
+        cursor: pointer;
+        padding: 13px 14px;
+        text-decoration: none;
         border: none;
       }
     button:hover {
-      background-color: #7c0000;
+      background-color: #b69e58;
     }
   }
 }
