--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,6 @@
 * {
   font-family: 'Yanone Kaffeesatz', sans-serif;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #DF0000;
+  background-color: #E8DCB8;
 }
 
 code {
