--- a/client/src/components/Dice.scss
+++ b/client/src/components/Dice.scss
@@ -8,8 +8,9 @@
   margin-top: 20px;
 }
 
-textarea {
-  height: 200px;
+.displayText textarea {
+  height: 100px;
+  width: 200px;
 }
 
 .dices {
@@ -48,6 +49,7 @@ textarea {
   color: #E8DCB8;
   text-align: center;
   font-variation-settings: 'wght' 600;
+  font-size: 24px;
 }
 
 .rollingDice button {
@@ -55,4 +57,24 @@ textarea {
   color: #E8DCB8;
   text-align: center;
   font-variation-settings: 'wght' 600;
+
+}
+
+.resultBar {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+.modifier {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.modifier input {
+  width: 50px;
 }
