--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,7 +1,6 @@
 
 .navbar {
   width: 100vw;
-  font-size: 20px;
   background-color: #2f2f2f;
   color: #E8DCB8;
   display: flex;
@@ -10,6 +9,7 @@
 
   #party-name {
     width: 30vw;
+    font-size: 1rem;
   }
 
   nav {
@@ -22,6 +22,7 @@
             color: #E8DCB8;
             display: inline-block;
             font-weight: bold;
+            font-size: 1rem;
             cursor: pointer;
             padding: 13px 14px;
             text-decoration: none;
