--- a/client/src/components/Player.scss
+++ b/client/src/components/Player.scss
@@ -2,11 +2,38 @@
   border: 2px solid black;
   width: 48vw;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   table: {
     margin-left: auto;
     margin-right: auto;
   }
   .dndClass {
     width: 10vw;
+    &.barbarian {
+      fill: darkred;
+    }
+    &.druid {
+      fill: green;
+    }
+    &.fighter {
+      fill: navy;
+    }
+    &.paladin {
+      fill: goldenrod;
+    }
+    &.ranger {
+      fill: darkolivegreen;
+    }
+    &.wizard {
+      fill: purple;
+    }
+  }
+  .conditions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
