--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap");
+
 * {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   box-sizing: border-box;
