--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 
 .navbar {
-  width: 100vw;
+  width: 100%;
   background-color: #2f2f2f;
   color: #E8DCB8;
   display: flex;
@@ -10,6 +10,7 @@
   #party-name {
     width: 30vw;
     font-size: 1.5rem;
+    padding-left: 0.5rem;
   }
 
   nav {
