--- a/client/src/components/Combat/CombatPlayer.scss
+++ b/client/src/components/Combat/CombatPlayer.scss
@@ -17,3 +17,30 @@
 .combatPlayer #dexterity {
   margin-right: 10px;
 }
+
+.editHP {
+  background-color: #2f2f2f;
+  color: #E8DCB8;
+  text-align: center;
+  padding: 0.1em;
+  font-size: 20px;
+  height: 28px;
+  font-variation-settings: 'wght' 600;
+  width: 100%;
+}
+
+.closeBtn {
+  background-color: #2f2f2f;
+  color: #E8DCB8;
+  text-align: center;
+  font-variation-settings: 'wght' 600;
+  scale: 2;
+  margin-left: 30px;
+}
+
+.newHP {
+  width: 100%;
+  font-size: 14px;
+  height: 24px;
+  margin-top: 5px;
+}
