Add overlay styling and remove pointer events from condition icons.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,3 +19,29 @@
     transform: rotate(360deg);
   }
 }
+
+.overlay-inactive {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  pointer-events: none;
+  z-index: 2;
+}
+
+.overlay-active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  transition: 200ms ease-in-out;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+}
+
+path, g, svg {
+  pointer-events: none;
+}
