--- a/client/src/components/Modal.scss
+++ b/client/src/components/Modal.scss
@@ -1,23 +1,3 @@
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
-  z-index: 2;
-}
-
-.overlay-active {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 2;
-}
-
 .modal-main {
   position:fixed;
   background: #ccc1a0;
@@ -25,9 +5,10 @@
   height: auto;
   top:50%;
   left:50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(1);
+  transition: 900ms ease-in-out;
   z-index: 3;
-  border: 1px solid black;
+  // border: 1px solid black;
   border-radius: 5px;
 }
 
