--- a/client/src/components/Combat/CombatPlayer.scss
+++ b/client/src/components/Combat/CombatPlayer.scss
@@ -18,29 +18,41 @@
   margin-right: 10px;
 }
 
-.editHP {
-  background-color: #2f2f2f;
-  color: #E8DCB8;
+.middle {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
   text-align: center;
-  padding: 0.1em;
-  font-size: 20px;
-  height: 28px;
-  font-variation-settings: 'wght' 600;
-  width: 100%;
+
+  .editHP {
+    background-color: #2f2f2f;
+    color: #E8DCB8;
+    text-align: center;
+    padding: 0.1em;
+    font-size: 20px;
+    height: 28px;
+    font-variation-settings: 'wght' 600;
+    width: 70%;
+    align-self: center;
+  }
+    
+  .newHP {
+    width: 70%;
+    font-size: 14px;
+    height: 24px; 
+  }
 }
 
-.closeBtn {
-  background-color: #2f2f2f;
-  color: #E8DCB8;
-  text-align: center;
-  font-variation-settings: 'wght' 600;
-  scale: 2;
-  margin-left: 30px;
-}
-
-.newHP {
-  width: 100%;
-  font-size: 14px;
-  height: 24px;
-  margin-top: 5px;
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 5px;
+  .closeBtn {
+    background-color: red;
+    color: #E8DCB8;
+    text-align: center;
+    font-variation-settings: 'wght' 600;
+    font-size: 24px;
+  }
 }
