--- a/client/src/components/Combat/CombatPlayerList.scss
+++ b/client/src/components/Combat/CombatPlayerList.scss
@@ -13,7 +13,6 @@
 }
 
 .forms {
-  display: flex;
   flex-direction: row;
 }
 
@@ -27,3 +26,72 @@
   width: 100%;
 }
 
+.inputAll {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 15px;
+  input{
+    font-size: 24px;
+    width: 150px;
+  }
+  
+  .inputHp{
+    display: flex;
+    align-items: center;
+    input{
+      margin-left: 20px; 
+    }
+  }
+  .inputClass{
+    display: flex;
+    align-items: center;
+    input{
+      margin-left: 20px; 
+    }
+  }
+  .inputDex {
+    display: flex;
+    align-items: center;
+    input{
+      margin-left: 20px; 
+    }
+  }
+}
+
+.inputName {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+  input {
+    margin-left: 20px;
+    font-size: 24px;
+    width: 80%;
+  }
+}
+
+.subTitle {
+  display: flex;
+  justify-content: center;
+}
+
+.createNclear {
+  display: flex;
+  justify-content: center;
+  button {
+    background-color: #2f2f2f;
+    color: #E8DCB8;
+    text-align: center;
+    padding: 0.1em;
+    font-size: 2rem;
+    font-variation-settings: 'wght' 600;
+    width: 40%;
+  }
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  color: red;
+  font-variation-settings: 'wght' 600;
+}
