--- a/client/src/components/Modal.scss
+++ b/client/src/components/Modal.scss
@@ -1,23 +1,14 @@
 .modal-main {
   position:fixed;
-  background: #ccc1a0;
+  background: #E8DCB8;
   width: 80%;
   height: auto;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%) scale(1);
-  transition: 900ms ease-in-out;
+  transition: 200ms ease-in-out;
   z-index: 3;
-  // border: 1px solid black;
   border-radius: 5px;
-}
-
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
 }
 
 .content {
@@ -28,4 +19,16 @@
   list-style: none;
   align-items: center;
   padding-left: 0;
+}
+
+.content li {
+  padding: 1rem 1rem;
+}
+
+#senses {
+padding: 0rem 1rem;
+}
+
+.monster-list {
+  columns: 2;
 }
