--- a/client/src/components/Combat/CombatPlayerList.scss
+++ b/client/src/components/Combat/CombatPlayerList.scss
@@ -35,6 +35,9 @@
     font-size: 24px;
     width: 150px;
   }
+  h4 {
+    padding-left: 10px;
+  }
   
   .inputHp{
     display: flex;
@@ -67,6 +70,9 @@
     margin-left: 20px;
     font-size: 24px;
     width: 80%;
+  }
+  h4 {
+    padding-left: 10px;
   }
 }
 
