--- a/client/src/components/Dice.scss
+++ b/client/src/components/Dice.scss
@@ -67,6 +67,7 @@
   font-size: 24px;
   height: 30px;
   margin-bottom: 10px;
+  resize: none;
 }
 
 .modifier {
@@ -77,4 +78,9 @@
 
 .modifier input {
   width: 50px;
+}
+
+.diceCollector {
+  font-size: 36px;
+  resize: none;
 }
