--- a/client/src/components/Tables.scss
+++ b/client/src/components/Tables.scss
@@ -10,7 +10,7 @@
   padding: 0.1em;
   font-size: 2rem;
   font-variation-settings: "wght" 600;
-  flex-grow: 1;
+  flex: 1;
 }
 
 .table-rows {
@@ -35,4 +35,13 @@
 #roll-length {
   height: auto;
   margin: 0rem 2rem;
+  max-width: 70px;
+  font-size: 1.5rem;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  margin: 0 0;
 }
