--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -58,3 +58,15 @@ input {
   border-width: 1px;
   margin: 0 0;
 }
+
+textarea {
+  margin: 0rem 2rem;
+  font-size: 1.5rem;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  margin: 0 0;
+}
