Remove cols from textarea in notes

--- a/client/src/components/Dice.scss
+++ b/client/src/components/Dice.scss
@@ -13,6 +13,12 @@
   width: 200px;
 }
 
+textarea {
+  resize: none;
+  font-size: 20px;
+  width: 300px
+}
+
 .dices {
   display: flex;
   justify-content: center;
